Fix small overflow problem on scroll for content containers.

--- a/src/Resume_Website/static/styles/about.css
+++ b/src/Resume_Website/static/styles/about.css
@@ -72,7 +72,7 @@
 .content-container{
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 20px;
-    margin: 1% 1% 7% 1%;
+    margin: 1% 1% 8% 1%;
     max-width: 900px;
     height: 75vh;
 
